# agentmesh

./: .env.example  .gitignore  README.md  ROADMAP.md  main.py  pyproject.toml  requirements.txt
agents/: coding-rules.md
apps/motedico/: pyproject.toml
apps/motedico/motedico/agents/: specialized.py
apps/podcast-generator/: README.md  pyproject.toml
apps/podcast-generator/docs/development_plans/: v3.0_implementation.md
apps/podcast-generator/podcast_generator/: config.py  fetcher.py  scheduler.py  translator.py  tts.py
apps/podcast-generator/podcast_generator/agents/: base.py  manager.py  network_agent.py  storage_agent.py  task_agent.py
apps/podcast-generator/podcast_generator/web/: app.py  auth.py  db.py
apps/podcast-generator/podcast_generator/web/templates/: article_detail.html  articles.html  base.html  index.html
apps/podcast-generator/tests/: test_sources.py  test_v3_protocols.py
docs/: AGENTSTR_INTEGRATION.md  ARCHITECTURE.md  README.md  ROADMAP.md  VISION.md  library.md  v3-agent-centric-roadmap.md  v3-mesh-architecture.md  v3-vision.md  web-app.md
podcast_generator/: config.py  translator.py
podcast_generator/agents/: network_agent.py  social_agent.py  storage_agent.py
podcast_generator/web/: app.py
podcast_generator/web/templates/: articles.html  login.html  settings.html
src/: __init__.py  audio.py  builder.py  config.py  fetcher.py  pipeline.py  tracker.py  translator.py  tts.py
src/web/: app.py
