[project]
name = "agentmesh"
version = "0.1.0"
description = "AgentMesh: A coordination mesh for decentralized AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AgentMesh Contributors" }]
dependencies = []

[tool.uv]
workspace = { members = ["apps/*", "packages/*"] }

[project.scripts]
agentmesh = "agentmesh.studio.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
