[project]
name = "podcast-generator"
version = "2.0.0"
description = "Transform newsletters into Italian podcast episodes"
requires-python = ">=3.10"
dependencies = [
    "agentmesh-core",
    "agentmesh-relay",
    "agentmesh-vault",
    "playwright>=1.58.0",
    "pydub>=0.25.1",
    "edge-tts>=6.1.3",
    "python-dotenv>=1.1.0",
    "google-genai>=1.14.0",
    "typer>=0.15.0",
    "rich>=13.9.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "sqlmodel>=0.0.22",
    "trafilatura>=1.12.0",
    "feedparser>=6.0.11",
    "imap-tools>=1.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
